# final-space-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  finalspace_sdk.py  finalspace_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  helpers.py  result.py  spec.py
py/entity/: character_entity.py  episode_entity.py  get_endpoint_entity.py  location_entity.py  quote_entity.py
py/feature/: clienttrack_feature.py  debug_feature.py  log_feature.py  metrics_feature.py  paging_feature.py  proxy_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_character_direct.py  test_character_entity.py  test_episode_direct.py  test_episode_entity.py  test_exists.py  test_get_endpoint_direct.py  test_get_endpoint_entity.py  test_location_direct.py  test_location_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_quote_direct.py  test_quote_entity.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  make_error.py  make_options.py  make_response.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_params.py  result_basic.py  result_body.py  result_headers.py
(+504 files in other folders)
